--- a/BMI cal/bmi.html
+++ b/BMI cal/bmi.html
@@ -14,10 +14,10 @@
     <div class="container">  
         <h1>BMI Calculator</h1>
         <label>
-            <input id="h-input" type="number" placeholder="Enter Your Height in Centimeters: ">
+            <input id="h-input" type="number" placeholder="Height in Cm: ">
         </label>        
         <label>
-            <input id="w-input" type="number" placeholder="Enter Your Weight in Kilogrames: ">
+            <input id="w-input" type="number" placeholder="Weight in Kg: ">
         </label>            
         <button type="submit" onclick="Calculate()">Calculate BMI</button>
             
